--- a/css/style.css
+++ b/css/style.css
@@ -49,17 +49,16 @@ a{
     text-decoration: underline;
 }
 .burger-icon{
-    width: 10%;
-    height: 19vh;
-    padding: 3px;
+    width: 11%;
     background: var(--secondary-color);
     display: none;
     position: absolute;
     right: 0;
-    top: 0px;
+    top: 30px;
     font-size: 40px;
     border-radius: 10px;
-    align-content: center;
+    text-align: center;
+    height: 50px;
 }
 .burger-icon:hover{
     background-color: var(--primary-color);
@@ -641,7 +640,7 @@ a{
         display: none;
     }
     .list_item{
-        margin: 5px;
+        margin: 10px;
         padding: 5px;
         border: 1px solid var(--secondary-color);
         border-radius: 10px;
