--- a/css/style.css
+++ b/css/style.css
@@ -167,7 +167,7 @@ a{
     color: var(--primary-color);
     font-weight: 700;
 }
-.image-submit, .ready-submit{
+.image-submit, .ready-submit, .templates-pdf-btn{
     width: 15%;
     height: 7vh;
     background-color: var(--primary-color);
@@ -179,7 +179,7 @@ a{
     cursor: pointer;
     display: none;
 }
-.color-num, .ready-color-num{
+.color-type, .color-num, .ready-color-num, .palettes-num, .ready-palettes-num{
     display: none;
 }
 /* COLOR TEMPLATES */
@@ -394,6 +394,104 @@ a{
 }
 .show{
     display: block;
+}
+/* COLORS SEARCH */
+.colors-search{
+    margin: 20px;
+}
+.search-title{
+    color: var(--primary-color);
+    font-size: 35px;
+    margin: 15px;
+}
+.form-search{
+    width: 60%;
+    margin: 0 auto;
+    display: flex;
+}
+.search {
+    flex: 0 0 90%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.search__input {
+    font-family: "Open Sans", sans-serif;
+    font-size: 17px;
+    color: #333333;
+    background-color: #f4f2f2;
+    border: 1px solid var(--primary-color);
+    padding: 14px 72px;
+    border-radius: 1000px;
+    width: 94%;
+    margin-left: -34px;
+    margin-right: -66px;
+    transition: all 0.2s;
+}
+.search__input:focus {
+    outline: none;
+    width: 100%;
+    background-color: #f0eeee;
+}
+.search__input::-webkit-input-placeholder {
+    font-size: 14px;
+    text-transform: uppercase;
+    font-weight: 500;
+    word-spacing: 3px;
+    color: #999999;
+}
+.search__button {
+    width: 11%;
+    height: 80%;
+    border: none;
+    border-radius: 1000px;
+    background-color: var(--primary-color);
+    z-index: 999;
+    cursor: pointer;
+    padding: 0 20px;
+    margin-right: -50px;
+}
+.search__button:focus {
+    outline: none;
+}
+.search__button:active {
+    transform: translateY(2px);
+}
+.search__icon {
+    height: 35px;
+    width: 35px;
+    fill: #999999;
+}
+.search__button:hover .search__icon{
+    fill: white;
+}
+.search-color-info{
+    margin: 40px 20px;
+}
+.search-color{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin: 10px 0;
+}
+.search-color:last-child{
+    display: block;
+    margin: 10px 70px;
+}
+.color-title{
+    font-size: 26px;
+    color: var(--primary-color);
+}
+.color-value{
+    font-size: 18px;
+    cursor: pointer;
+    font-weight: 600;
+}
+.color-image{
+    width: 30%;
+    margin: 10px auto;
+    border-radius: 10px;
+    box-shadow: 0 5px 10px;
 }
 /* LOGIN FORM */
 .main{
