--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,9 @@ a{
     color: white;
     text-decoration: none;
 }
+body{
+    color: var(--primary-color);
+}
 .container{
     margin: 0 auto;
     width: 100%;
@@ -204,6 +207,7 @@ a{
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
+    color: white;
 }
 .color-card{
     text-align: center;
@@ -233,10 +237,12 @@ a{
 .color-more-info{
     padding: 20px 40px;
     direction: ltr;
+    color: black;
 }
 .mode-title{
     font-size: 21px;
     margin-top: 10px;
+    color: var(--primary-color);
 }
 .mode-value{
     padding-left: 40px;
@@ -400,7 +406,6 @@ a{
     margin: 20px;
 }
 .search-title{
-    color: var(--primary-color);
     font-size: 35px;
     margin: 15px;
 }
@@ -486,12 +491,28 @@ a{
     font-size: 18px;
     cursor: pointer;
     font-weight: 600;
+    color: black;
 }
-.color-image{
+.search-color-image{
     width: 30%;
-    margin: 10px auto;
+    margin: 10px 35%;
     border-radius: 10px;
     box-shadow: 0 5px 10px;
+}
+.search-type{
+    display: none;
+}
+.search-palettes-num{
+    display: none;
+}
+.search-color-num{
+    display: none;
+}
+.search-submit{
+    display: none;
+}
+.search-more-info{
+    color: black;
 }
 /* LOGIN FORM */
 .main{
@@ -884,6 +905,45 @@ a{
     }
     .colorName{
         font-size: 22px;
+    }
+    /* COLORS SEARCH */
+    .colors-search{
+        margin: 10px;
+    }
+    .search-title{
+        font-size: 40px;
+    }
+    .form-search{
+        width: 100%;
+    }
+    .search {
+        flex: 0 0 100%;
+    }
+    .search__input {
+        font-size: 19px;
+        padding: 10px 32px;
+        border-radius: 50px;
+        width: 95%;
+        margin-left: -90px;
+    }
+    .search__input:focus {
+        width: 99%;
+    }
+    .search__input::-webkit-input-placeholder {
+        font-size: 16px;
+        font-weight: 400;
+        word-spacing: 2px;
+    }
+    .search__button {
+        width: 18%;
+        height: 82%;
+        border-radius: 50px;
+        padding: 0 19px;
+        margin-right: -15px;
+    }
+    .search-color-image{
+        width: 100%;
+        margin: 10px 0px;
     }
     /* LOGIN FORM */
     .login-form{
