--- a/css/style.css
+++ b/css/style.css
@@ -339,7 +339,7 @@ body{color: var(--primary-color);}
 }
 .search__button:focus {outline: none;}
 .search__button:active {transform: translateY(2px);}
-.search__icon { height: 35px; width: 35px; fill: #999999;}
+.search__icon { height: 35px; fill: #999999;}
 .search__button:hover .search__icon{fill: white;}
 .search-color-info{margin: 40px 20px;}
 .search-color{
@@ -627,13 +627,13 @@ body{color: var(--primary-color);}
         margin-left: -90px;
     }
     .search__input:focus {width: 99%;}
-    .search__input::-webkit-input-placeholder { font-size: 14px; font-weight: 400; word-spacing: 2px;}
+    .search__input::-webkit-input-placeholder { font-size: 10px; font-weight: 400; word-spacing: 0px;}
     .search__button {
         width: 18%;
         height: 82%;
         border-radius: 50px;
-        padding: 0 28px;
-        margin-right: -7px;
+        padding: 0 22px;
+        margin-right: 6px;
     }
     .search-color-image{width: 100%;margin: 10px 0px;}
     /* LOGIN FORM */
